--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   padding: 0;
 }
 
+.container-main{
+  /* background-color: green; */
+  display: flex;
+  justify-content: center;
+}
+
 
 .auth-layout {
   height: 100vh;
@@ -119,38 +125,47 @@
 
 .navbar-custom h4{
   color: aliceblue;
+  cursor:pointer
 }
 
 /*HOMEPAGE*/
+.home-page{
+  width: 90%;
+}
 
 .home-container{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
+  margin: 1rem 0;
+
 }
 
 .add-button{
-  font-size: large;
-  font-weight: 400;
-  border-radius: 10px;
-  border: 0px solid #888888;
-  box-shadow: 2px 5px 5px #888888;
-  background-color: #ffffff;
-  padding: 5px;
+  border-radius: 10%;
+  height: 50px;
+  border: 2px solid #008DDA;
+  /* box-shadow: 2px 2px 20px #888888; */
+  background-color: #008DDA;
+  width: 40px;
+  height: 40px;
+  color:#ffff;
+  font-size: 1.5rem;
+  font-weight: bold;
+  justify-content: center;
 }
 
 .add-button:hover{
-  background-color: #008DDA;
-  color: #ffffff;
+  background-color: #ffff;
+  color: #008DDA;
 }
 
 .summary-card{
   /* background-color: red; */
-  border: 1px solid #888888;
+  /* border: 1px solid #888888; */
   border-radius: 10px;
   padding: 10px;
-  box-shadow: 5px 10px 18px #888888;
+  box-shadow: 2px 2px 20px #888888;
+  margin-bottom: 1rem;
 }
 
 .summary-card h6{
@@ -167,6 +182,29 @@
 
 .amount-red{
 color: red;
+}
+
+/* ALL PORTFOLIO PAGE */
+.all-portfolio{
+  margin: 1rem;
+  width: 90%;
+}
+
+.all-portfolio h3{
+  font-weight: 400;
+  text-align: center;
+  margin: 0.5rem;
+  text-transform: capitalize;
+}
+
+.single-portfolio{
+  margin: 0.5rem;
+}
+
+/* sidebar */
+.sidebar{
+  /* height:200px; */
+  width:300px !important;
 }
 
 
