--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,15 @@
 
 .auth-layout {
   height: 100vh;
-  /* background-image: url("./assets/login-background/3383078.jpg"); */
-  background-image: url(" https://img.freepik.com/free-photo/abstract-digital-grid-black-background_53876-97647.jpg");
+   /* background-image: url("./assets/background.jpg"); */
+  /* background-image: url(" https://img.freepik.com/free-photo/abstract-digital-grid-black-background_53876-97647.jpg"); */
   background-size: cover;
+  background-image: linear-gradient(to bottom right,#002f4b,#dc4225);
+	opacity: .7; 
 }
 
 .auth-layout h4{
-  color:white;
+  color: #ffff;
   display: inline;
   margin: 2rem;
   font-weight: 400;
@@ -36,14 +38,14 @@
 .login-page section {
   width: 30rem;
   border-radius: 20px;
-  border: 2px solid #888888;
+  border: 2px solid #ffff;
   padding: 10px;
   box-shadow: 5px 10px 18px #888888;
 
 }
 
 .login-page section h2 {
-  color: aliceblue;
+  color: #ffff;
   text-align: center;
   font-weight: 100;
   margin-bottom: 1rem;
@@ -56,24 +58,25 @@
 }
 
 .login-page p {
-  color: aliceblue;
   margin: 5px;
   text-align: center;
+  color: #ffff;
+
 }
 
 .login-page a {
-  color: aliceblue;
+  color: yellow;
 }
 
 .login-page input {
   outline: 0;
-  border-width: 0 0 1px;
+  border-width: 0 0 3px;
   border-color: yellow;
 }
 
 .login-page input:focus {
-  border-color: burlywood;
-  border-width: 0 0 2px;
+  border-color: green;
+  border-width: 0 0 3px;
 }
 
 /*SIGNUP PAGE */
@@ -89,13 +92,14 @@
   padding: 1rem;
   text-align: center;
   border-radius: 20px;
-  border: 2px solid #888888;
+  border: 2px solid #ffff;
   padding: 10px;
   box-shadow: 5px 10px 18px #888888;
 }
 
 .signup-page section h2 {
-  color: aliceblue;
+  color: #ffff;
+
   text-align: center;
   font-weight: 100;
   margin-bottom: 1rem;
@@ -107,13 +111,14 @@
 }
 
 .signup-page p {
-  color: aliceblue;
   margin: 5px;
+  color: #ffff;
+
   text-align: center;
 }
 
 .signup-page a {
-  color: aliceblue;
+  color: yellow;
 }
 
 /*NAVBAR */
@@ -159,12 +164,29 @@
   color: #008DDA;
 }
 
-.summary-card{
-  /* background-color: red; */
-  /* border: 1px solid #888888; */
+.single-summary-card{
   border-radius: 10px;
   padding: 10px;
-  box-shadow: 2px 2px 20px #888888;
+  margin:1rem 0;
+  border: 1px solid lightgray;
+}
+
+.single-summary-card h6{
+  font-size: 0.8rem;
+  font-weight: 400;
+}
+
+.single-summary-card span{
+  font-size: 1.2rem;
+}
+
+
+.summary-card{
+  /* background-color: red; */
+  border: 1px solid lightgray;
+  border-radius: 10px;
+  padding: 10px;
+  /* box-shadow: 2px 2px 20px #888888; */
   margin-bottom: 1rem;
 }
 
@@ -205,6 +227,32 @@ color: red;
 .sidebar{
   /* height:200px; */
   width:300px !important;
+ 
+}
+
+.sidebar-main{
+
+}
+.img-block{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
+.sidebar-main h5{
+text-align: center;
+}
+
+.links{
+  padding: 0.5rem;
+  width: 100%;
+  text-align: center;
+
+}
+
+.links a{
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 
@@ -212,8 +260,9 @@ color: red;
 
 footer {
   text-align: center;
-  color:wheat
+  color:#ffff;
 }
 footer a{
-  color:white;
+
+  color:#ffff;
 }
