--- a/src/App.css
+++ b/src/App.css
@@ -48,13 +48,14 @@
 
 
 .container-main {
-  /* background-color: green; */
+  background-color: lavenderblush;
   display: flex;
   justify-content: center;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
-
+  margin-top: 3rem;
+  /* height: 100%; */
 }
 
 
@@ -208,14 +209,17 @@
 
 /*NAVBAR */
 
+
 .navbar-custom {
   padding: 0 1em;
   background-color: #008DDA;
   height: 3rem;
-  position: -webkit-sticky;
+  /* position: -webkit-sticky; */
   /* Safari */
-  position: sticky;
+  position: fixed;
+  width: 100%;
   top: 0;
+  z-index: 1000;
 
 }
 
@@ -235,9 +239,7 @@
 
 /*SIDEBAR*/
 
-.sidebar {
-  /* background-color:#2c73d2; */
-}
+
 
 .img-block {
   display: flex;
@@ -249,10 +251,19 @@
   border-radius: 25px;
 }
 
-.sidebar-main h5 {
-  text-align: center;
-  font-weight: 400;
+.sidebar {
+  width: 300px;
+  background-color: rgba(255, 255, 255, 0.5); /* Transparent white */
+  backdrop-filter: blur(10px); /* Blurs content behind the div */
+  -webkit-backdrop-filter: blur(10px); /* Safari support */
 }
+
+.sidebar-main h4 {
+  text-align: center;
+  font-weight: 350;
+  font-size: 1.7rem;
+}
+
 
 .links {
   padding: 0.5rem;
@@ -263,18 +274,18 @@
 
 .links a {
   text-decoration: none;
-  font-size: 1.3rem;
-  color: #845ec2;
-  background-color: #ffc75f;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: #296073;
+  /* background-color: lavenderblush; */
   display: block;
   width: 100%;
-  /* border: 1px solid grey; */
+  /* border-bottom: 3px solid #3498db;  */
   margin-bottom: 5px;
   border-radius: 5px;
 }
 
 .links a:hover {
-
   color: #ffc75f;
   background-color: #845ec2;
 }
@@ -292,19 +303,24 @@
 /*HOMEPAGE*/
 .home-page {
   width: 90%;
+  /* background-color: red; */
 }
 
 .home-container {
   display: flex;
   justify-content: space-between;
   margin: 1rem 0;
+  padding: 10px;
+  background-color: #ffff;
+  border-radius: 5px;
 
 }
 
 .add-button {
   border-radius: 10%;
   border: 2px solid #008DDA;
-  /* box-shadow: 2px 2px 20px #888888; */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  /* Adds shadow */
   background-color: #008DDA;
   width: 40px;
   height: 40px;
@@ -328,10 +344,11 @@
   border-radius: 10px;
   padding: 10px;
   margin: 1rem 0;
-  border: 1px solid lightgray;
-  /* background-color: red;
-  color:black */
+  border: 2px solid lightpink;
+  background-color: #ffff;
+  /* color:black */
 }
+
 
 .single-summary-card h6 {
   font-size: 0.8rem;
@@ -344,10 +361,10 @@
 
 
 .summary-card {
-  /* background-color: red; */
-  border: 1px solid lightgray;
+  background-color: #ffff;
+  border: 2px solid lightpink;
   border-radius: 10px;
-  padding: 10px;
+  padding: 20px;
   /* box-shadow: 2px 2px 20px #888888; */
   margin-bottom: 1rem;
 
@@ -366,13 +383,13 @@
   justify-content: space-between;
 }
 
-.box-end h6{
+.box-end h6 {
   font-weight: 300;
   color: darkgray;
 
 }
 
-.box-end span{
+.box-end span {
   color: #2c73d2;
   font-weight: 400;
   font-size: 1rem;
@@ -426,8 +443,8 @@
 .portfolio-detail h6 {
   font-weight: 300;
   font-size: 0.8rem;
-  color:darkgray
-  /* background-color: red; */
+  color: darkgray
+    /* background-color: red; */
 }
 
 .portfolio-detail span {
@@ -448,6 +465,10 @@
 
 }
 
+.tabs li{
+  /* background-color:lightcoral; */
+}
+
 /*USER PROFILE */
 .user-profile {
   border: 2px solid #4d8076;
@@ -455,6 +476,7 @@
   width: 90%;
   padding: 10px;
   margin: 15rem 0;
+  background-color: #ffff;
 }
 
 .user-profile img {
@@ -476,16 +498,11 @@
 
 
 
-/* sidebar */
-.sidebar {
-  /* height:200px; */
-  width: 300px !important;
-
-}
 
 
 
 /*PROFILE*/
+
 .tabs {
   /* background-color: red; */
   margin-top: 5px;
@@ -494,10 +511,10 @@
 
 .tabs li {
   font-size: 0.9rem;
-  font-weight: bold;
+  /* font-weight: bold; */
   /* background-color: #008DDA; */
-  color: #008DDA;
-  margin: 2px;
+  color: red;
+  /* margin: 2px; */
 }
 
 .nav-tabs {
@@ -559,9 +576,9 @@ h6 {
 
 /*FONTS */
 .h5-title {
-  color: #808080;
+  color: #4d8076;
   text-transform: capitalize;
-  font-weight: 300;
+  font-weight: 500;
   font-style: normal;
   font-size: 1.3 rem;
 }
@@ -571,5 +588,11 @@ h6 {
   text-transform: capitalize;
   font-weight: 300;
   font-style: normal;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+}
+
+.h3-title span {
+  font-size: 0.9rem;
+  margin-right: 2rem;
+
 }
