--- a/src/App.css
+++ b/src/App.css
@@ -571,6 +571,39 @@
   border-radius: 5px;
 }
 
+/*MODAL */
+.common-modal{
+  border-radius: 10px;
+  background-color: #fbeaff;
+
+}
+
+.modal-title{
+  font-weight: 400;
+  font-size: 1.4rem;
+}
+
+.modal-form input {
+  /* outline: 0; */
+  border-radius: 5px;
+  border-width: 0 0 3px;
+  border-color: pink;
+  border-radius: 0;
+}
+
+.modal-form input:focus {
+  outline: none;
+  box-shadow: none;
+  font-weight: 500;
+  border-color: blue;
+  border-width: 0 0 3px;
+}
+/* 
+input:focus{
+  outline: none;
+  box-shadow: none;
+} */
+
 /*FOOTER*/
 
 footer {
