--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@
   font-weight: 400;
   font-style: normal;
   margin-top: 3rem;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 
@@ -418,6 +418,14 @@
   color: red;
 }
 
+.amount-red-h6{
+  color: red !important;
+}
+
+.amount-green-h6{
+  color: green !important;
+}
+
 /* ALL PORTFOLIO PAGE */
 .all-portfolio {
   margin: 1rem;
@@ -483,7 +491,7 @@
   border-radius: 10px;
   width: 90%;
   padding: 10px;
-  margin: auto 0;
+  margin: 12rem 0;
   background-color: #ffff;
 }
 
